--- a/src/app/features/portfolio/pages/project-detail/project-detail.component.html
+++ b/src/app/features/portfolio/pages/project-detail/project-detail.component.html
@@ -29,6 +29,7 @@
           *ngIf="project.websiteUrl"
           class="button button--primary-accent"
           [href]="project.websiteUrl"
+          target="_blank"
         >
           <svg
             class="button__icon button__icon--light"
