--- a/src/app/features/portfolio/components/contact-section/contact-section.component.scss
+++ b/src/app/features/portfolio/components/contact-section/contact-section.component.scss
@@ -3,13 +3,49 @@
 
 .contact {
   background-color: $primary-background-color-light;
+
+  &__form-container {
+    position: relative;
+  }
 }
 
-.form__group {
-  @include media-breakpoint-up("md") {
-    &:first-child,
-    &:nth-child(2) {
-      flex: 1;
+.form {
+  visibility: hidden;
+  &--visible {
+    visibility: visible;
+  }
+  &__group {
+    @include media-breakpoint-up("md") {
+      &:first-child,
+      &:nth-child(2) {
+        flex: 1;
+      }
     }
+  }
+}
+
+.email-status {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__title {
+    font-family: $secondary-font-bold;
+    font-size: 1.5rem;
+    color: $primary-font-color-dark;
+    margin-bottom: 1rem;
+  }
+
+  &__title,
+  &__description {
+    text-align: center;
+  }
+
+  &__retry-button {
+    margin-top: 2rem;
   }
 }
