Included tomkes feedback and added actual conten

--- a/src/app/features/portfolio/components/about-section/about-section.component.html
+++ b/src/app/features/portfolio/components/about-section/about-section.component.html
@@ -1,7 +1,7 @@
 <section class="section about">
   <div class="container">
     <shared-section-header
-      title="Was mich ausmacht"
+      title="Was mich auszeichnet"
       subtitle="Über mich"
     ></shared-section-header>
     <div class="about__content-container">
@@ -9,7 +9,7 @@
         <div class="padding-top-hack padding-top-hack--1-by-1">
           <div class="padding-top-hack__inner-container">
             <img
-              src="/assets/images/about-image.jpeg"
+              src="/assets/images/about-image.jpg"
               alt=""
               class="about__image"
             />
@@ -17,14 +17,16 @@
         </div>
       </div>
       <p class="section__paragraph fade-in">
-        Labore id qui cupidatat laborum mollit. Velit eiusmod ullamco laborum
-        commodo sunt laboris sunt consectetur aliqua laborum consectetur quis
-        magna ea. Id exercitation fugiat sunt adipisicing. Veniam et nisi cillum
-        officia nostrud non labore do commodo proident sunt dolor pariatur
-        ullamco. Sunt officia in ut quis ut dolore magna in in. Incididunt anim
-        eiusmod velit fugiat. Eu occaecat aliquip aliqua voluptate laboris aute
-        qui cillum incididunt pariatur sit laboris aute. Adipisicing aute ea est
-        do.
+        Was als Leidenschaft und Traum begann, hat sich zu einer Lebensart
+        entwickelt. Die ersten Berührungspunkte sammelte ich bei der Fotografie
+        von Supercars. Inzwischen teste und fahre ich leidenschaftlich PS-starke
+        Fahrzeuge im Sportwagen- und Elektrofahrzeug- Segment. Meine Abenteuer
+        und Erfahrungen teile ich mit meiner Community, hauptsächlich auf
+        Instagram und TikTok. Einen erfolgreichen Social Media Auftritt konnte
+        ich jedoch nicht nur auf meinen eigenen Kanälen aufbauen, sondern auch
+        für zahlreiche Firmen. Authentizität, starke Skills in Foto und
+        Videographie sowie Fundiertes Social Media wissen sind dabei mein
+        Markenzeichen. Dabei agiere ich mit Leidenschaft und Herzblut.
       </p>
     </div>
   </div>
