--- a/src/app/features/portfolio/components/contact-section/contact-section.component.html
+++ b/src/app/features/portfolio/components/contact-section/contact-section.component.html
@@ -1,7 +1,7 @@
 <section class="section contact">
   <div class="container">
     <shared-section-header
-      title="Schreibe mir direkt eine Nachricht"
+      title="Schreibe mir eine Nachricht"
       subtitle="Kontakt"
     ></shared-section-header>
     <div class="contact__form-container">
