--- a/src/app/features/portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.html
@@ -7,9 +7,12 @@
           ich bin <span class="hero__name">Tomke</span>
         </h1>
         <p class="hero__mission-statement">
-          Lorem cillum aliqua eu aliquip pariatur do sunt. Aute quis Lorem
-          tempor non ad. Eiusmod Lorem sint ipsum do cillum incididunt tempor
-          cillum aliqua tempor et culpa.
+          Als leidenschaftlicher Autoliebhaber fahre und teste ich die neusten
+          Modelle der renommiertesten Automarken. Dabei teile ich meine
+          spannenden Abenteuer mit meiner Community auf Instagram und Tiktok.
+          <br />
+          In Kooperation mit verschiedenen Firmen erschaffe ich durch meine
+          Skills im Bereich Foto- und Videografie spannendes Storytelling.
         </p>
         <div class="hero__social-media-channels-container">
           <shared-social-media-channels
