Added spinner to all functions calling the backend

--- a/src/app/features/portfolio/components/contact-section/contact-section.component.scss
+++ b/src/app/features/portfolio/components/contact-section/contact-section.component.scss
@@ -48,4 +48,10 @@
   &__retry-button {
     margin-top: 2rem;
   }
+
+  &__spinner-container {
+    // The spinner height is 70px less than the lottie animations height.
+    // This centers the spinner.
+    margin-top: 35px;
+  }
 }
