--- a/src/app/features/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/features/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,4 @@
+<shared-spinner *ngIf="shouldShowSpinner"></shared-spinner>
 <admin-dashboard-toast
   *ngIf="currentToast"
   [type]="currentToast.type"
