--- a/src/app/features/portfolio/components/contact-section/contact-section.component.html
+++ b/src/app/features/portfolio/components/contact-section/contact-section.component.html
@@ -126,14 +126,9 @@
         </div>
       </form>
       <div *ngIf="emailStatus === EmailStatus.PENDING" class="email-status">
-        <lottie-player
-          src="/assets/animations/spinner.json"
-          background="rgba(0, 0, 0, 0)"
-          speed="1"
-          style="width: 150px; height: 150px"
-          autoplay
-          loop
-        ></lottie-player>
+        <div class="email-status__spinner-container">
+          <shared-spinner [isEmbedded]="true"></shared-spinner>
+        </div>
       </div>
       <div *ngIf="emailStatus === EmailStatus.ERROR" class="email-status">
         <lottie-player
