--- a/src/app/shared/components/spinner/spinner.component.scss
+++ b/src/app/shared/components/spinner/spinner.component.scss
@@ -22,7 +22,14 @@
     z-index: 4;
     width: 100%;
     height: 100%;
-    background-color: $overlay-color;
+
+    &--transparent {
+      background-color: $overlay-color;
+    }
+
+    &--white {
+      background-color: $primary-background-color-light;
+    }
 
     &--embedded {
       all: initial;
