--- a/src/app/features/portfolio/components/project-gallery/project-gallery.component.scss
+++ b/src/app/features/portfolio/components/project-gallery/project-gallery.component.scss
@@ -37,6 +37,7 @@
       "first-project second-project second-project fifth-project"
       "third-project third-project fourth-project fifth-project";
     gap: var(--grid-gap);
+    background-color: $primary-background-color-light;
   }
 
   &__grid-item {
