--- a/src/app/features/portfolio/components/projects-section/projects-section.component.html
+++ b/src/app/features/portfolio/components/projects-section/projects-section.component.html
@@ -1,12 +1,20 @@
-<section class="section">
+<section class="section projects">
   <div class="container">
     <shared-section-header
       title="Meine letzten Projekte"
       subtitle="Projekte"
     ></shared-section-header>
   </div>
-  <portfolio-project-gallery
-    *ngIf="projects"
-    [projects]="projects"
-  ></portfolio-project-gallery>
+  <div class="projects__project-gallery-container">
+    <ng-container *ngIf="projects; else spinner">
+      <portfolio-project-gallery
+        [projects]="projects"
+      ></portfolio-project-gallery>
+    </ng-container>
+    <ng-template #spinner>
+      <div class="projects__spinner-container">
+        <shared-spinner [isEmbedded]="true"></shared-spinner>
+      </div>
+    </ng-template>
+  </div>
 </section>
