--- a/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.html
+++ b/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.html
@@ -6,7 +6,7 @@
     >
     </shared-section-header>
   </div>
-  <div #slideshowContainer class="swiper fade-in">
+  <div #slideshowContainer class="swiper" sharedFadeIn>
     <div class="swiper-wrapper testimonials-section__testimonials-container">
       <div
         class="swiper-slide testimonials-section__testimonial-container"
