--- a/src/app/features/portfolio/components/about-section/about-section.component.html
+++ b/src/app/features/portfolio/components/about-section/about-section.component.html
@@ -5,7 +5,7 @@
       subtitle="Über mich"
     ></shared-section-header>
     <div class="about__content-container">
-      <div class="about__image-container fade-in">
+      <div class="about__image-container" sharedFadeIn>
         <div class="padding-top-hack padding-top-hack--1-by-1">
           <div class="padding-top-hack__inner-container">
             <img
@@ -16,7 +16,7 @@
           </div>
         </div>
       </div>
-      <p class="section__paragraph fade-in">
+      <p class="section__paragraph" sharedFadeIn>
         Was als Leidenschaft und Traum begann, hat sich zu einer Lebensart
         entwickelt. Die ersten Berührungspunkte sammelte ich bei der Fotografie
         von Supercars. Inzwischen teste und fahre ich leidenschaftlich PS-starke
