--- a/src/app/features/portfolio/components/contact-section/contact-section.component.html
+++ b/src/app/features/portfolio/components/contact-section/contact-section.component.html
@@ -15,7 +15,7 @@
         (ngSubmit)="onSubmit(contactForm)"
       >
         <div class="form__body">
-          <div class="form__group fade-in">
+          <div class="form__group" sharedFadeIn>
             <input
               type="text"
               placeholder="Name"
@@ -37,7 +37,7 @@
               </p>
             </div>
           </div>
-          <div class="form__group fade-in">
+          <div class="form__group" sharedFadeIn>
             <input
               type="email"
               placeholder="Email"
@@ -66,7 +66,7 @@
               </p>
             </div>
           </div>
-          <div class="form__group fade-in">
+          <div class="form__group" sharedFadeIn>
             <textarea
               cols="30"
               rows="10"
@@ -93,7 +93,8 @@
         <div class="form__footer">
           <button
             type="submit"
-            class="button button--primary-accent fade-in"
+            class="button button--primary-accent"
+            sharedFadeIn
             [disabled]="contactForm.invalid"
           >
             <svg
