--- a/src/app/features/portfolio/components/news-section/news-section.component.html
+++ b/src/app/features/portfolio/components/news-section/news-section.component.html
@@ -4,6 +4,24 @@
       title="Meine letzten Posts"
       subtitle="News"
     ></shared-section-header>
-    <div class="instafeed"></div>
+    <div class="instafeed">
+      <div *ngFor="let instagramPost of instagramPosts" sharedFadeIn>
+        <div class="padding-top-hack padding-top-hack--1-by-1">
+          <div class="padding-top-hack__inner-container">
+            <a
+              class="instafeed__link"
+              [href]="instagramPost.link"
+              target="_blank"
+            >
+              <img
+                class="instafeed__image"
+                [title]="instagramPost.caption"
+                [src]="instagramPost.image"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
