--- a/src/app/features/portfolio/components/project-gallery/project-gallery.component.html
+++ b/src/app/features/portfolio/components/project-gallery/project-gallery.component.html
@@ -4,6 +4,7 @@
       <div
         *ngFor="let project of grid.projects"
         class="project-gallery__grid-item"
+        sharedFadeIn
       >
         <portfolio-project-gallery-item [project]="project">
         </portfolio-project-gallery-item>
