--- a/src/app/features/portfolio/components/news-section/news-section.component.scss
+++ b/src/app/features/portfolio/components/news-section/news-section.component.scss
@@ -3,14 +3,24 @@
 
 .news {
   background-color: $secondary-background-color-light;
+
+  &__instafeed-container {
+    width: 100%;
+    max-width: 935px;
+    margin: 0 auto;
+  }
+
+  &__spinner-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .instafeed {
   // Rules resemble official Instagram styling
   display: grid;
-  width: 100%;
-  max-width: 935px;
-  margin: 0 auto;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-flow: row;
   gap: 0.1875rem;
