--- a/src/styles/layout/_aspect-ratio.scss
+++ b/src/styles/layout/_aspect-ratio.scss
@@ -7,6 +7,10 @@
     padding-top: 100%;
   }
 
+  &--3-by-2 {
+    padding-top: calc(2 / 3 * 100%);
+  }
+
   &--16-by-9 {
     padding-top: 56.25%;
   }
