Improvements and fixes

--- a/src/app/features/admin-dashboard/components/header/header.component.scss
+++ b/src/app/features/admin-dashboard/components/header/header.component.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   z-index: 1;
-  box-shadow: 0 4px 4px 0 hsla(0, 0, 70, 0.25);
+  box-shadow: 0 4px 4px 0 #b3b3b340;
   border-bottom: 1px solid $primary-background-color-light;
   background-color: $primary-background-color-light;
 
