--- a/src/app/features/admin-dashboard/components/project-modal-file-input/project-modal-file-input.component.html
+++ b/src/app/features/admin-dashboard/components/project-modal-file-input/project-modal-file-input.component.html
@@ -32,6 +32,7 @@
         #imageFileInput
         type="file"
         hidden
+        accept="image/png, image/jpeg"
         [multiple]="multipleImages"
         (change)="onChangeFileInput(imageFileInput.files)"
       />
