--- a/src/app/features/admin-dashboard/components/project-modal/project-modal.component.html
+++ b/src/app/features/admin-dashboard/components/project-modal/project-modal.component.html
@@ -80,7 +80,7 @@
             <div class="project-modal__multi-select-container">
               <select
                 #servicesSelect
-                class="form__control"
+                class="form__control form__control--select"
                 [ngClass]="{
                   'project-modal__multi-select-default-option':
                     servicesSelect.value === ''
