--- a/src/app/features/portfolio/components/about-section/about-section.component.html
+++ b/src/app/features/portfolio/components/about-section/about-section.component.html
@@ -24,8 +24,8 @@
         und Erfahrungen teile ich mit meiner Community, hauptsächlich auf
         Instagram und TikTok. Einen erfolgreichen Social Media Auftritt konnte
         ich jedoch nicht nur auf meinen eigenen Kanälen aufbauen, sondern auch
-        für zahlreiche Firmen. Authentizität, starke Skills in Foto und
-        Videographie sowie Fundiertes Social Media wissen sind dabei mein
+        für zahlreiche Firmen. Authentizität, starke Skills in Foto- und
+        Videographie sowie fundiertes Social Media wissen sind dabei mein
         Markenzeichen. Dabei agiere ich mit Leidenschaft und Herzblut.
       </p>
     </div>
