--- a/src/styles/layout/_form.scss
+++ b/src/styles/layout/_form.scss
@@ -31,6 +31,14 @@
     &::placeholder {
       color: $form-control-placeholder-color;
     }
+
+    // On Safari padding does not work for the select element. This is a workaround.
+    &--select {
+      padding: 0;
+      text-indent: 1rem;
+      line-height: calc(1.175rem + 2 * 1rem);
+      height: calc(1.175rem + 2 * 1rem);
+    }
   }
 
   &__alerts-container {
