--- a/src/app/features/portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.html
@@ -9,10 +9,7 @@
         <p class="hero__mission-statement">
           Als leidenschaftlicher Autoliebhaber fahre und teste ich die neusten
           Modelle der renommiertesten Automarken. Dabei teile ich meine
-          spannenden Abenteuer mit meiner Community auf Instagram und Tiktok.
-          <br />
-          In Kooperation mit verschiedenen Firmen erschaffe ich durch meine
-          Skills im Bereich Foto- und Videografie spannendes Storytelling.
+          spannenden Abenteuer mit meiner Community.
         </p>
         <div class="hero__social-media-channels-container">
           <shared-social-media-channels
