--- a/src/app/features/portfolio/components/hero-section/hero-section.component.scss
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.scss
@@ -11,11 +11,7 @@
 
   &__overlay {
     height: 100%;
-    background-image: linear-gradient(
-      90deg,
-      hsla(0, 0, 0, 0.7),
-      hsla(0, 0, 50, 0.7)
-    );
+    background-image: linear-gradient(90deg, #000000b3, #808080b3);
   }
 
   &__content-container {
