--- a/src/app/features/portfolio/components/project-detail-slideshow/project-detail-slideshow.component.scss
+++ b/src/app/features/portfolio/components/project-detail-slideshow/project-detail-slideshow.component.scss
@@ -9,6 +9,8 @@
   &__cinema-image-container {
     border-radius: $default-border-radius;
     overflow: hidden;
+    position: relative;
+    z-index: 0;
   }
 
   &__cinema-image {
@@ -56,6 +58,8 @@
     width: calc(1 / 3 * 100% - 2 * 0.5rem / 3);
     border-radius: $default-border-radius;
     overflow: hidden;
+    position: relative;
+    z-index: 0;
   }
 
   &__preview-image-overlay {
