--- a/src/app/features/portfolio/components/project-gallery-item/project-gallery-item.component.scss
+++ b/src/app/features/portfolio/components/project-gallery-item/project-gallery-item.component.scss
@@ -7,6 +7,7 @@
   border-radius: $default-border-radius;
   overflow: hidden;
   position: relative;
+  z-index: 0;
 
   &:hover &__overlay {
     opacity: 1;
@@ -64,7 +65,7 @@
 
   @include media-breakpoint-up("md") {
     &__overlay {
-      padding: 2rem;
+      padding: 1.25rem;
     }
   }
 }
