--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -11,7 +11,7 @@
   @include with-transition(all);
 
   &--white {
-    box-shadow: 0 4px 4px 0 hsla(0, 0, 70, 0.25);
+    box-shadow: 0 4px 4px 0 #b3b3b340;
     border-bottom: 1px solid $primary-background-color-light;
   }
   &--transparent {
