--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -7,6 +7,7 @@
   gap: 0.5rem;
   align-items: center;
   position: relative;
+  z-index: 0;
   overflow: hidden;
 
   &:hover:not(:disabled)::before {
