Navbar toggle on click and more

--- a/src/app/features/portfolio/components/about-section/about-section.component.html
+++ b/src/app/features/portfolio/components/about-section/about-section.component.html
@@ -25,7 +25,7 @@
         Instagram und TikTok. Einen erfolgreichen Social Media Auftritt konnte
         ich jedoch nicht nur auf meinen eigenen Kanälen aufbauen, sondern auch
         für zahlreiche Firmen. Authentizität, starke Skills in Foto- und
-        Videographie sowie fundiertes Social Media wissen sind dabei mein
+        Videografie sowie fundiertes Social Media Wissen sind dabei mein
         Markenzeichen. Dabei agiere ich mit Leidenschaft und Herzblut.
       </p>
     </div>
