--- a/src/app/features/portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.html
@@ -13,9 +13,9 @@
         </p>
         <div class="hero__social-media-channels-container">
           <shared-social-media-channels
-            instagramUrl="/"
-            linkedInUrl="/"
-            tikTokUrl="/"
+            instagramUrl="https://www.instagram.com/tomke_nils"
+            linkedInUrl="https://www.linkedin.com/in/tomke-janowitz-032711191"
+            tikTokUrl="https://www.tiktok.com/@tomke_nils"
           ></shared-social-media-channels>
         </div>
         <!-- Only for intersection observer purpuses -->
