--- a/src/app/features/portfolio/pages/project-detail/project-detail.component.scss
+++ b/src/app/features/portfolio/pages/project-detail/project-detail.component.scss
@@ -17,7 +17,7 @@
   }
 
   &__slideshow-container {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
   }
 
   &__text-information-container {
@@ -38,6 +38,8 @@
 
   &__title {
     text-align: center;
+    line-height: 1.125;
+    margin-bottom: 1rem;
   }
 
   &__paragraph {
@@ -74,7 +76,6 @@
       // line-height is decreased to 1 so that the title alligns with the other h2
       // headings
       line-height: 1;
-      margin-bottom: calc((3.75rem * 1.5 - 3.75rem) / 2);
     }
 
     &__paragraph {
