--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -40,9 +40,9 @@
         </svg>
       </a>
       <shared-social-media-channels
-        instagramUrl="/"
-        linkedInUrl="/"
-        tikTokUrl="/"
+        instagramUrl="https://www.instagram.com/tomke_nils"
+        linkedInUrl="https://www.linkedin.com/in/tomke-janowitz-032711191"
+        tikTokUrl="https://www.tiktok.com/@tomke_nils"
         [iconsColor]="SocialMediaIconsColor.LIGHT"
       ></shared-social-media-channels>
     </div>
