--- a/src/app/features/portfolio/components/services-section/services-section.component.html
+++ b/src/app/features/portfolio/components/services-section/services-section.component.html
@@ -1,6 +1,6 @@
 <section class="section services">
   <div class="container">
-    <shared-section-header title="Was ich mache" subtitle="Leistungen">
+    <shared-section-header title="Was mache Ich?" subtitle="Leistungen">
     </shared-section-header>
     <div class="services__service-cards-container">
       <div
