Changed footer link

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -5,7 +5,7 @@
       <a href="/data-privacy" class="footer__link"> Datenschutz </a>
     </div>
     <div class="footer__icons-container">
-      <a href="/">
+      <a routerLink="/">
         <svg
           width="39"
           height="39"
