--- a/src/app/features/admin-dashboard/components/project-modal/project-modal.component.html
+++ b/src/app/features/admin-dashboard/components/project-modal/project-modal.component.html
@@ -206,6 +206,7 @@
         <div class="form__footer">
           <button
             class="button button--primary-accent-inverted"
+            type="button"
             (click)="clickCancelButton.emit()"
           >
             <svg
