Forgot one thing

--- a/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.scss
+++ b/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.scss
@@ -60,12 +60,12 @@
     }
 
     &--left {
-      left: $container-horizontal-padding-xs;
+      left: 0;
       margin-left: -$default-button-hitbox;
     }
 
     &--right {
-      right: $container-horizontal-padding-xs;
+      right: 0;
       margin-right: -$default-button-hitbox;
     }
   }
@@ -73,19 +73,6 @@
   &__arrow-icon {
     width: 24px;
     height: 24px;
-  }
-
-  @include media-breakpoint-up("sm") {
-    &__navigation-button--left {
-      left: calc(
-        (100vw - (100vw - 100%) - map.get($container-widths, "sm")) / 2
-      );
-    }
-    &__navigation-button--right {
-      right: calc(
-        (100vw - (100vw - 100%) - map.get($container-widths, "sm")) / 2
-      );
-    }
   }
 
   @include media-breakpoint-up("md") {
