Added localization for most of the landing page and included language dropdown menu

--- a/src/app/features/portfolio/components/news-section/news-section.component.html
+++ b/src/app/features/portfolio/components/news-section/news-section.component.html
@@ -3,6 +3,8 @@
     <shared-section-header
       title="Meine letzten Posts"
       subtitle="News"
+      i18n-title
+      i18n-subtitle
     ></shared-section-header>
     <div class="news__instafeed-container">
       <div class="padding-top-hack padding-top-hack--3-by-2">
