--- a/src/app/features/portfolio/components/projects-section/projects-section.component.html
+++ b/src/app/features/portfolio/components/projects-section/projects-section.component.html
@@ -3,6 +3,8 @@
     <shared-section-header
       title="Meine letzten Projekte"
       subtitle="Projekte"
+      i18n-title
+      i18n-subtitle
     ></shared-section-header>
   </div>
   <div class="projects__project-gallery-container">
