--- a/src/app/features/portfolio/components/services-section/services-section.component.html
+++ b/src/app/features/portfolio/components/services-section/services-section.component.html
@@ -1,6 +1,11 @@
 <section class="section services">
   <div class="container">
-    <shared-section-header title="Was mache Ich?" subtitle="Leistungen">
+    <shared-section-header
+      title="Was mache Ich?"
+      subtitle="Leistungen"
+      i18n-title
+      i18n-subtitle
+    >
     </shared-section-header>
     <div class="services__service-cards-container">
       <div
