--- a/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.html
+++ b/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.html
@@ -3,6 +3,8 @@
     <shared-section-header
       title="Was andere über mich sagen"
       subtitle="Empfehlungen"
+      i18n-title
+      i18n-subtitle
     >
     </shared-section-header>
     <div #slideshowContainer class="swiper" sharedFadeIn>
