--- a/src/app/features/portfolio/components/about-section/about-section.component.html
+++ b/src/app/features/portfolio/components/about-section/about-section.component.html
@@ -3,6 +3,8 @@
     <shared-section-header
       title="Was mich auszeichnet"
       subtitle="Über mich"
+      i18n-title
+      i18n-subtitle
     ></shared-section-header>
     <div class="about__content-container">
       <div class="about__image-container" sharedFadeIn>
@@ -16,7 +18,7 @@
           </div>
         </div>
       </div>
-      <p class="section__paragraph" sharedFadeIn>
+      <p class="section__paragraph" sharedFadeIn i18n>
         Was als Leidenschaft und Traum begann, hat sich zu einer Lebensart
         entwickelt. Die ersten Berührungspunkte sammelte ich bei der Fotografie
         von Supercars. Inzwischen teste und fahre ich leidenschaftlich PS-starke
