--- a/src/app/features/portfolio/components/contact-section/contact-section.component.html
+++ b/src/app/features/portfolio/components/contact-section/contact-section.component.html
@@ -3,6 +3,8 @@
     <shared-section-header
       title="Schreibe mir eine Nachricht"
       subtitle="Kontakt"
+      i18n-title
+      i18n-subtitle
     ></shared-section-header>
     <div class="contact__form-container">
       <form
@@ -24,6 +26,7 @@
               #name="ngModel"
               name="name"
               required
+              i18n-placeholder
             />
             <div
               *ngIf="name.invalid && name.touched"
@@ -32,6 +35,7 @@
               <p
                 *ngIf="name.errors ? name.errors['required'] : undefined"
                 class="form__alert"
+                i18n
               >
                 Du musst deinen Namen angeben
               </p>
@@ -47,6 +51,7 @@
               #email="ngModel"
               required
               email
+              i18n-placeholder
             />
             <div
               *ngIf="email.invalid && email.touched"
@@ -55,12 +60,14 @@
               <p
                 *ngIf="email.errors ? email.errors['required'] : undefined"
                 class="form__alert"
+                i18n
               >
                 Du musst deine E-Mail-Adresse angeben
               </p>
               <p
                 *ngIf="email.errors ? email.errors['email'] : undefined"
                 class="form__alert"
+                i18n
               >
                 Ungültige E-Mail-Adresse
               </p>
@@ -76,6 +83,7 @@
               ngModel
               #message="ngModel"
               required
+              i18n-placeholder
             ></textarea>
             <div
               *ngIf="message.invalid && message.touched"
@@ -84,6 +92,7 @@
               <p
                 *ngIf="message.errors ? message.errors['required'] : undefined"
                 class="form__alert"
+                i18n
               >
                 Du musst eine Nachricht eingeben
               </p>
@@ -122,7 +131,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="button__label button__label--light">Senden</p>
+            <p class="button__label button__label--light" i18n>Senden</p>
           </button>
         </div>
       </form>
@@ -139,8 +148,8 @@
           style="width: 150px; height: 150px"
           autoplay
         ></lottie-player>
-        <p class="email-status__title">Ups, etwas ist schief gegangen!</p>
-        <p class="email-status__description">
+        <p class="email-status__title" i18n>Ups, etwas ist schief gegangen!</p>
+        <p class="email-status__description" i18n>
           Versuche es bitte erneut. Falls das Problem weiterhin besteht,
           kontaktiere mich bitte über die am Seitenende stehende E-Mail-Adresse.
         </p>
@@ -159,7 +168,7 @@
               d="M13.5 2c-5.288 0-9.649 3.914-10.377 9h-3.123l4 5.917 4-5.917h-2.847c.711-3.972 4.174-7 8.347-7 4.687 0 8.5 3.813 8.5 8.5s-3.813 8.5-8.5 8.5c-3.015 0-5.662-1.583-7.171-3.957l-1.2 1.775c1.916 2.536 4.948 4.182 8.371 4.182 5.797 0 10.5-4.702 10.5-10.5s-4.703-10.5-10.5-10.5z"
             />
           </svg>
-          <p class="button__label button__label--light">Wiederholen</p>
+          <p class="button__label button__label--light" i18n>Wiederholen</p>
         </button>
       </div>
       <div *ngIf="emailStatus === EmailStatus.SUCCESS" class="email-status">
@@ -170,8 +179,8 @@
           style="width: 150px; height: 150px"
           autoplay
         ></lottie-player>
-        <p class="email-status__title">Vielen Dank!</p>
-        <p class="email-status__description">
+        <p class="email-status__title" i18n>Vielen Dank!</p>
+        <p class="email-status__description" i18n>
           Ich schreibe dir in Kürze zurück.
         </p>
       </div>
