--- a/src/app/features/portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.html
@@ -2,11 +2,11 @@
   <div class="hero__overlay">
     <div class="hero__content-container">
       <div class="container">
-        <h1 class="hero__title">
+        <h1 i18n class="hero__title">
           Hi, <br />
           ich bin <span class="hero__name">Tomke</span>
         </h1>
-        <p class="hero__mission-statement">
+        <p i18n class="hero__mission-statement">
           Als leidenschaftlicher Autoliebhaber fahre und teste ich die neusten
           Modelle der renommiertesten Automarken. Dabei teile ich meine
           spannenden Abenteuer mit meiner Community.
@@ -46,14 +46,12 @@
               />
             </svg>
             <p
-              class="
-                button__label button__label--light
-                hero__contact-button-label
-              "
+              class="button__label button__label--light hero__contact-button-label"
               [ngClass]="{
                 'hero__contact-button-label--fixed':
                   isContactButtonIntersecting === false
               }"
+              i18n
             >
               Kontakt
             </p>
