Localization is now working on dev server

--- a/src/app/shared/components/language-dropdown-menu/language-dropdown-menu.component.html
+++ b/src/app/shared/components/language-dropdown-menu/language-dropdown-menu.component.html
@@ -22,8 +22,12 @@
   >
     <div class="triangle"></div>
     <ul class="list">
-      <li class="item"><a routerLink="/" class="link">🇩🇪 DE</a></li>
-      <li class="item"><a routerLink="/" class="link">🇬🇧 EN</a></li>
+      <li class="item">
+        <a [href]="'/de' + (currentRoute ?? '')" class="link">🇩🇪 DE</a>
+      </li>
+      <li class="item">
+        <a [href]="'/en' + (currentRoute ?? '')" class="link">🇬🇧 EN</a>
+      </li>
     </ul>
   </nav>
 </div>
