Finished localization for static content

--- a/src/app/features/portfolio/pages/impressum/impressum.component.html
+++ b/src/app/features/portfolio/pages/impressum/impressum.component.html
@@ -2,19 +2,19 @@
 <main class="impressum__main">
   <div class="container">
     <h1 class="impressum__primary-heading">Impressum</h1>
-    <p class="impressum__paragraph">Angaben gemäß § 5 TMG</p>
+    <p class="impressum__paragraph" i18n>Angaben gemäß § 5 TMG</p>
     <p class="impressum__paragraph">
       Tomke Nils Janowitz <br />
       Hees 1 <br />
       47652 Weeze
     </p>
-    <h2 class="impressum__secondary-heading">Vertreten durch:</h2>
-    <p class="impressum__paragraph">Tomke Nils Janowitz</p>
-    <h2 class="impressum__secondary-heading">Kontakt:</h2>
-    <p class="impressum__paragraph">
+    <h2 class="impressum__secondary-heading" i18n>Vertreten durch:</h2>
+    <p class="impressum__paragraph" i18n>Tomke Nils Janowitz</p>
+    <h2 class="impressum__secondary-heading" i18n>Kontakt:</h2>
+    <p class="impressum__paragraph" i18n>
       E-Mail:<a href="mailto:kontakt@tomke-nils.de">kontakt@tomke-nils.de</a>
     </p>
-    <h2 class="impressum__secondary-heading">
+    <h2 class="impressum__secondary-heading" i18n>
       Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:
     </h2>
     <p class="impressum__paragraph">
@@ -23,9 +23,9 @@
       47652 Weeze
     </p>
 
-    <h2 class="impressum__secondary-heading">Haftungsausschluss:</h2>
-    <h3 class="impressum__tertiary-heading">Haftung für Inhalte</h3>
-    <p class="impressum__paragraph">
+    <h2 class="impressum__secondary-heading" i18n>Haftungsausschluss:</h2>
+    <h3 class="impressum__tertiary-heading" i18n>Haftung für Inhalte</h3>
+    <p class="impressum__paragraph" i18n>
       Die Inhalte meiner Seiten wurden mit größter Sorgfalt erstellt. Für die
       Richtigkeit, Vollständigkeit und Aktualität der Inhalte kann ich jedoch
       keine Gewähr übernehmen. Als Diensteanbieter bin ich gemäß § 7 Abs.1 TMG
@@ -40,8 +40,8 @@
       von entsprechenden Rechtsverletzungen werde ich diese Inhalte umgehend
       entfernen.
     </p>
-    <h3 class="impressum__tertiary-heading">Haftung für Links</h3>
-    <p class="impressum__paragraph">
+    <h3 class="impressum__tertiary-heading" i18n>Haftung für Links</h3>
+    <p class="impressum__paragraph" i18n>
       Mein Angebot enthält Links zu externen Webseiten Dritter, auf deren
       Inhalte ich keinen Einfluss habe. Deshalb kann ich für diese fremden
       Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten
@@ -53,8 +53,8 @@
       einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von
       Rechtsverletzungen werde ich derartige Links umgehend entfernen.
     </p>
-    <h3 class="impressum__tertiary-heading">Urheberrecht</h3>
-    <p class="impressum__paragraph">
+    <h3 class="impressum__tertiary-heading" i18n>Urheberrecht</h3>
+    <p class="impressum__paragraph" i18n>
       Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen
       Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung,
       Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen
