--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -55,7 +55,7 @@
   <p class="footer__author-note" i18n>
     Designt und entwickelt von
     <a
-      href="https://jonas-wolfram.de"
+      href="https://jonas-wolfram.com"
       target="_blank"
       class="footer__jonas-wolfram-link"
     >
